--- a/index.html
+++ b/index.html
@@ -1,28 +1,253 @@
+<!DOCTYPE HTML>
+<!--
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<!-- Text between angle brackets is an HTML tag and is not displayed.
-Most tags, such as the HTML and /HTML tags that surround the contents of
-a page, come in pairs; some tags, like HR, for a horizontal rule, stand 
-alone. Comments, such as the text you're reading, are not displayed when
-the Web page is shown. The information between the HEAD and /HEAD tags is 
-not displayed. The information between the BODY and /BODY tags is displayed.-->
-<head>
-<title>Enter a title, displayed at the top of the window.</title>
-</head>
-<!-- The information between the BODY and /BODY tags is displayed.-->
-<body>
-<h1>HELLO JULIANNE.</h1>
-<p>Be <b>bold</b> in stating your key points. Put them in a list: </p>
-<ul>
-<li>The first item in your list</li>
-<li>The second item; <i>italicize</i> key words</li>
-</ul>
-<p>Improve your image by including an image. </p>
-<p><img src="http://www.mygifs.com/CoverImage.gif" alt="A Great HTML Resource"></p>
-<p>Add a link to your favorite <a href="https://www.dummies.com/">Web site</a>.
-Break up your page with a horizontal rule or two. </p>
-<hr>
-<p>Finally, link to <a href="page2.html">another page</a> in your own Web site.</p>
-<!-- And add a copyright notice.-->
-<p>&#169; Wiley Publishing, 2011</p>
-</body>
+	<head>
+		<title>To Be Destructed</title>
+		<meta charset="utf-8" />
+        <meta name="author" content = "Christopher Wishon">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+        <script src="assets/js/sorttable.js"></script>
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+        <div id="wrapper">
+
+            <!-- Main -->
+            <div id="main">
+                <div class="inner">
+
+                    <!-- Header -->
+                    <header id="header">
+                        <a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+                        <ul class="icons">
+                            <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                            <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                            <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+                            <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                            <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+                        </ul>
+                    </header>
+
+                    <!-- 2020 Section -->
+                    <section>
+                        <header class="major">
+                            <h2>2020 Season</h2>
+                        </header>
+                        <div class="features">
+                            <div class="table-wrapper">
+                                <table class="alt sortable">
+                                    <thead>
+                                        <tr>
+                                            <th>Rank</th>
+                                            <th>Team</th>
+                                            <th>Owner</th>
+                                            <th>Wins</th>
+                                            <th>Points For</th>
+                                            <th>Points Against</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>LAMARS Kamaravirus 2</td>
+                                            <td>B. Bettinger</td>
+                                            <td>9</td>
+                                            <td>1730.68</td>
+                                            <td>1395.86</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>Face Down Mask Up</td>
+                                            <td>J. Butler</td>
+                                            <td>9</td>
+                                            <td>1545.02</td>
+                                            <td>1436.64</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>Einhorn is Finkle</td>
+                                            <td>P. James</td>
+                                            <td>7</td>
+                                            <td>1650.48</td>
+                                            <td>1563.52</td>
+                                        </tr>
+                                        <tr>
+                                            <td>4</td>
+                                            <td>Fresh Prince of Helaire</td>
+                                            <td>K. Sanderson</td>
+                                            <td>7</td>
+                                            <td>1625.02</td>
+                                            <td>1395.32</td>
+                                        </tr>
+                                        <tr>
+                                            <td>5</td>
+                                            <td>Buffalo David Muir</td>
+                                            <td>R. Spiegel</td>
+                                            <td>6</td>
+                                            <td>1469.44</td>
+                                            <td>1515.52</td>
+                                        </tr>
+                                        <tr>
+                                            <td>6</td>
+                                            <td>AJ Green-Seers</td>
+                                            <td>C. Spano</td>
+                                            <td>5</td>
+                                            <td>1459.66</td>
+                                            <td>1612.42</td>
+                                        </tr>
+                                        <tr>
+                                            <td>7</td>
+                                            <td>Pimpin' Ain't Breesy</td>
+                                            <td>C. Wishon</td>
+                                            <td>5</td>
+                                            <td>1424.16</td>
+                                            <td>1457.06</td>
+                                        </tr>
+                                        <tr>
+                                            <td>8</td>
+                                            <td>Ryan Tanne-HALLSTARS</td>
+                                            <td>C. Balint</td>
+                                            <td>5</td>
+                                            <td>1412.42</td>
+                                            <td>1509.48</td>
+                                        </tr>
+                                        <tr>
+                                            <td>9</td>
+                                            <td>Wentz Ass Philly</td>
+                                            <td>B. Ninni</td>
+                                            <td>4</td>
+                                            <td>1346.96</td>
+                                            <td>1629.44</td>
+                                        </tr>
+                                        <tr>
+                                            <td>10</td>
+                                            <td>Brock Lobster-weiler</td>
+                                            <td>C. Ida</td>
+                                            <td>3</td>
+                                            <td>1355.52</td>
+                                            <td>1504.10</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </section>
+
+                    <!-- Section -->
+                    <section>
+                        <header class="major">
+                            <h2>Ipsum sed dolor</h2>
+                        </header>
+                        <div class="posts">
+                            <article>
+                                <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+                                <h3>Interdum aenean</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <ul class="actions">
+                                    <li><a href="#" class="button">More</a></li>
+                                </ul>
+                            </article>
+                            <article>
+                                <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                                <h3>Nulla amet dolore</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <ul class="actions">
+                                    <li><a href="#" class="button">More</a></li>
+                                </ul>
+                            </article>
+                            <article>
+                                <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                                <h3>Tempus ullamcorper</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <ul class="actions">
+                                    <li><a href="#" class="button">More</a></li>
+                                </ul>
+                            </article>
+                            <article>
+                                <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+                                <h3>Sed etiam facilis</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <ul class="actions">
+                                    <li><a href="#" class="button">More</a></li>
+                                </ul>
+                            </article>
+                            <article>
+                                <a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+                                <h3>Feugiat lorem aenean</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <ul class="actions">
+                                    <li><a href="#" class="button">More</a></li>
+                                </ul>
+                            </article>
+                            <article>
+                                <a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+                                <h3>Amet varius aliquam</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <ul class="actions">
+                                    <li><a href="#" class="button">More</a></li>
+                                </ul>
+                            </article>
+                        </div>
+                    </section>
+
+                </div>
+            </div>
+
+            <!-- Sidebar -->
+            <div id="sidebar">
+                <div class="inner">
+
+                    <!-- Menu -->
+                    <nav id="menu">
+                        <header class="major">
+                            <h2>Menu</h2>
+                        </header>
+                        <ul>
+                            <li><a href="index.html">Homepage</a></li>
+                            <li>
+                                <span class="opener">Season Data</span>
+                                <ul>
+                                    <li><a href="#">Standings(2)</a></li>
+                                    <li><a href="#">Positional Trends(7)</a></li>
+                                    <li><a href="#">Power Rankings</a></li>
+                                    <li><a href="#">Expected Wins(8)</a></li>
+                                    <li><a href="#">Schedule Difficulty(9)</a></li>
+                                    <li><a href="#">Points Per Position(10)</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <span class="opener">Weekly Results</span>
+                                <ul>
+                                    <li><a href="#">Summary(1) w/ point breakdown</a></li>
+                                    <li><a href="#">Best Ball(3)</a></li>
+                                    <li><a href="#">Top NFL Players(4)</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Matchup Timelines</a></li>
+                            <li><a href="#">Fantasy Draft</a></li>
+                            <li><a href="#">NFL Team Data</a></li>
+                            <li><a href="#">NFL Player Data</a></li>
+                            <li><a href="#">Season Superlatives</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+            </div>
+
+        </div>
+
+		<!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+
+	</body>
 </html>
