--- a/index.html
+++ b/index.html
@@ -305,12 +305,12 @@
                             <li>
                                 <span class="opener">Season Data</span>
                                 <ul>
-                                    <li><a href="#">Standings(2)</a></li>
-                                    <li><a href="#">Positional Trends(7)</a></li>
-                                    <li><a href="#">Power Rankings</a></li>
-                                    <li><a href="#">Expected Wins(8)</a></li>
-                                    <li><a href="#">Schedule Difficulty(9)</a></li>
-                                    <li><a href="#">Points Per Position(10)</a></li>
+                                    <li><a href="subPages/seasonStats.html#standings">Standings(2)</a></li>
+                                    <li><a href="subPages/seasonStats.html#positionalTrends">Positional Trends(7)</a></li>
+                                    <li><a href="subPages/seasonStats.html#powerRankings">Power Rankings</a></li>
+                                    <li><a href="subPages/seasonStats.html#expectedWins">Expected Wins(8)</a></li>
+                                    <li><a href="subPages/seasonStats.html#scheduleDifficulty">Schedule Difficulty(9)</a></li>
+                                    <li><a href="subPages/seasonStats.html#pointPerPosition">Points Per Position(10)</a></li>
                                 </ul>
                             </li>
                             <li>
