--- a/subPages/seasonStats.html
+++ b/subPages/seasonStats.html
@@ -37,6 +37,29 @@
                     <!-- 2021 Section -->
                     <section id="standings">
                         <header class="major">
+                            <h2>Season</h2>
+                        </header>
+                        <div class="row gtr-uniform">
+                            <div class="col-2 col-12-xsmall">
+                                <input type="radio" id="season-2019" name="season-select" checked>
+                                <label for="season-2019">2019</label>
+                            </div>
+                            <div class="col-2 col-12-xsmall">
+                                <input type="radio" id="season-2020" name="season-select" checked>
+                                <label for="season-2020">2020</label>
+                            </div>
+                            <div class="col-2 col-12-xsmall">
+                                <input type="radio" id="season-2021" name="season-select">
+                                <label for="season-2021">2021</label>
+                            </div>
+                        </div>
+                    </section>
+                    
+                    
+
+                    <!-- 2021 Section -->
+                    <section>
+                        <header class="major">
                             <h2>Reg. Season Standings</h2>
                         </header>
                         <h3>ASDF</h3>
