--- a/subPages/seasonStats.html
+++ b/subPages/seasonStats.html
@@ -35,7 +35,7 @@
                     </header>
 
                     <!-- 2021 Section -->
-                    <section id="standings">
+                    <section id="yearSelect">
                         <header class="major">
                             <h2>Season</h2>
                         </header>
@@ -122,7 +122,7 @@
                             <li>
                                 <span class="opener">Season Data</span>
                                 <ul>
-                                    <li><a href="#standings">Standings(2)</a></li>
+                                    <li><a href="#">Standings(2)</a></li>
                                     <li><a href="#positionalTrends">Positional Trends(7)</a></li>
                                     <li><a href="#powerRankings">Power Rankings</a></li>
                                     <li><a href="#expectedWins">Expected Wins(8)</a></li>
