--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             <li>
                                 <span class="opener">Season Data</span>
                                 <ul>
-                                    <li><a href="subPages/seasonStats.html#">Standings(2)</a></li>
+                                    <li><a href="subPages/seasonStats.html">Standings(2)</a></li>
                                     <li><a href="subPages/seasonStats.html#positionalTrends">Positional Trends(7)</a></li>
                                     <li><a href="subPages/seasonStats.html#powerRankings">Power Rankings</a></li>
                                     <li><a href="subPages/seasonStats.html#expectedWins">Expected Wins(8)</a></li>
