--- a/subPages/seasonStats.html
+++ b/subPages/seasonStats.html
@@ -58,7 +58,7 @@
                     
 
                     <!-- 2021 Section -->
-                    <section>
+                    <section id="standings">
                         <header class="major">
                             <h2>Reg. Season Standings</h2>
                         </header>
